[package]
name = "zwr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zwr"
path = "zwr/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.17.0"
http = "0.2.9"
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
urlencoding = "2.1.3"
warp = "0.3.5"
